--- a/genindex.html
+++ b/genindex.html
@@ -739,6 +739,12 @@
         <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.print_results">(copyxnat.xnat.commands.Command method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.progress_update">progress_update() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.progress_update">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.project">project (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.project">project() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
@@ -755,10 +761,10 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.project_list">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
+</li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
@@ -795,9 +801,11 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.rebuild_catalog">rebuild_catalog() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatAssessor.rebuild_catalog">rebuild_catalog() (copyxnat.xnat.xnat_interface.XnatAssessor method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.rebuild_catalog">(copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+</li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.rebuild_catalog">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       </ul></li>
