--- a/_modules/copyxnat/xnat/run_command.html
+++ b/_modules/copyxnat/xnat/run_command.html
@@ -189,6 +189,7 @@
         <span class="n">server_project</span><span class="o">.</span><span class="n">run_recursive</span><span class="p">(</span>
             <span class="n">function</span><span class="o">=</span><span class="n">project_command</span><span class="o">.</span><span class="n">run</span><span class="p">,</span>
             <span class="n">from_parent</span><span class="o">=</span><span class="n">dst_xnat_server</span><span class="p">,</span>
+            <span class="n">ignore_filter</span><span class="o">=</span><span class="n">project_command</span><span class="o">.</span><span class="n">ignore_filter</span><span class="p">,</span>
             <span class="n">reporter</span><span class="o">=</span><span class="n">reporter</span><span class="p">)</span>
         <span class="n">reporter</span><span class="o">.</span><span class="n">complete_progress</span><span class="p">()</span>
 
