--- a/_modules/copyxnat/xnat_backend/pyxnat_server.html
+++ b/_modules/copyxnat/xnat_backend/pyxnat_server.html
@@ -45,7 +45,7 @@
 <span class="kn">import</span> <span class="nn">abc</span>
 <span class="kn">import</span> <span class="nn">os</span>
 
-<span class="kn">from</span> <span class="nn">pyxnat</span> <span class="kn">import</span> <span class="n">Interface</span><span class="p">,</span> <span class="n">Inspector</span>
+<span class="kn">from</span> <span class="nn">pyxnat</span> <span class="kn">import</span> <span class="n">Interface</span>
 
 
 <div class="viewcode-block" id="PyXnatServer"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer">[docs]</a><span class="k">class</span> <span class="nc">PyXnatServer</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
@@ -63,8 +63,7 @@
 
 <div class="viewcode-block" id="PyXnatServer.project_list"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.project_list">[docs]</a>    <span class="k">def</span> <span class="nf">project_list</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Return array of project ids&quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="p">[</span><span class="n">project</span><span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span> <span class="k">for</span> <span class="n">project</span> <span class="ow">in</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">_get_json</span><span class="p">(</span><span class="s1">&#39;/REST/projects&#39;</span><span class="p">)]</span>  <span class="c1"># pylint: disable=protected-access</span></div>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">inspect</span><span class="o">.</span><span class="n">project_values</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="PyXnatServer.projects"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">[docs]</a>    <span class="k">def</span> <span class="nf">projects</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Return array of PyXnatProject projects&quot;&quot;&quot;</span>
@@ -77,7 +76,7 @@
 
 <div class="viewcode-block" id="PyXnatServer.datatypes"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.datatypes">[docs]</a>    <span class="k">def</span> <span class="nf">datatypes</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Return datatypes on this server&quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">Inspector</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">())</span><span class="o">.</span><span class="n">datatypes</span><span class="p">()</span></div>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">inspect</span><span class="o">.</span><span class="n">datatypes</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="PyXnatServer.logout"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.logout">[docs]</a>    <span class="k">def</span> <span class="nf">logout</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Disconnect from server&quot;&quot;&quot;</span>
